# telatko

./: Find difference between two versions of telatko.ipynb  README.md  a.out  a1  a2  are_eq.py  aut.hoa  branch.info  c.cpp  csv_gen.py  demopr  demopr.out  diff  difference1.cycles  difference1.prec  difference1.sat  difference1.scc  difference1.tele  evaluation.py  info_ke_statistikam  last_equivalent  lcr-i587-1HufL7  long_delag.hoa  ltl2tgba.hoa  ltl3tela  main.py  old.py  outfile  parse_statistics.py  problem  problem.out  product_sum.py  rab.3  rab.4  rab4.4  sat_evaluation  sat_file  sat_file_diff  set1.hoa  set1.stats  (+25 more)
.ipynb_checkpoints/: sub_worse-checkpoint.ipynb
acd/: acd.ipynb  acd1.hoa  acd1_alternative.hoa  acd1_alternative_res.hoa  acd1_optimized-neekv.tele  acd1_optimized.hoa  acd2.hoa  acd_worse_example2.hoa  worse_example3.hoa
artefacts/: telatko-statistics.ipynb  telatko.py
bp_sets/: ltl3tela.hoa  set2.hoa  worse_example1.hoaL1.csv
cpp_remake/: CMakeLists.txt  classes.cpp  hello  main.cpp  tele
cpp_remake/telatko2/: t_main.cpp
csv/: ltl2tgba.tele.csv  ltl3tela.scc.csv  ltl3tela.tele.csv  rab4.cycles.csv
example_automata/: aut_that_requires_pck_nck_and_or  dnf_example.hoa  dnf_sub.hoa  last_equivalent  not_eq.res  noteq.hoa  sub_worse  sub_worse.L1  sub_worse.L2  sub_worse.eq.L2  sub_worse.ipynb  sub_worse.unopt.L2  worse_example2.simpl
from_input_aut/: ltl2tgba.scc.csv
hw03-modelling_in_nusmv/: report
increasing_level/: ltl2tgba.scc.csv  ltl2tgba.tele.csv  ltletela.cycles.csv  ltletela.scc.csv  ltletela.tele.csv  rab4.cycles.csv
(+21937 files in other folders)
